--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
-Flask==1.1.2
-Flask-SQLAlchemy==2.4.4
-python-dotenv==0.15.0
-SQLAlchemy==1.3.22
+click==8.1.0
+Flask==2.1.0
+Flask-SQLAlchemy==2.5
+greenlet==3.0.3
+importlib-metadata==4.11.3
+itsdangerous==2.1.2
+Jinja2==3.1.1
+MarkupSafe==2.1.2
+SQLAlchemy==1.4.22
+Werkzeug==2.1.0
+zipp==3.7.0
